# AIAPBRT-BachelorProject

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.txt  README.md
data/set1/: .gitignore  killeroo-simple.exr  smallSet.csv
data/set1/Test13/: DATA.txt
data/set1/Test14/: Ergebniss.txt
data/set2/KerasRefTest01/: RES.txt
data/set2/Test02/: 123.txt
data/set2/Test1 - LC/: T01.txt
data/set2/Test2/: RES.txt
data/set2/Test3 -NN/: EVAL.txt  T02.txt
data/set2/Test4/: RES.txt  spheres_data.txt
data/set2/Test5/: RES.txt  sphere.txt
data/set2/Test6/: RES.txt
data/set2/Test7/: RES.txt  RESULT.txt
data/set2/sets/: .gitignore
docs/: Bachelorthesis - Raytracing.docx  Bachelorthesis-Expose_raytracing - v2.docx  Bachelorthesis-Expose_raytracing.docx
docs/Thesis/: Abschlussarbeit_Wing_Winf_V1.docx
docs/history/: Bachelorthesis - Raytracing.docx
docs/print/: cover.psd
scenes/: c4D REPRASENTATION.c4d  killeroo-simple.pbrt
src/: pbrt.cpp
src/accelerators/: bvh.cpp  bvh.h  kdtreeaccel.cpp  kdtreeaccel.h
src/core/: api.cpp  api.h  camera.h  efloat.cpp  efloat.h  error.cpp  error.h  fileutil.cpp  fileutil.h  film.cpp  floatfile.cpp  floatfile.h  geometry.cpp  geometry.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.h  lowdiscrepancy.h  material.h  medium.h  memory.cpp  memory.h  parallel.cpp  parallel.h  paramset.cpp  paramset.h  parser.cpp  parser.h  pbrt.h  primitive.cpp  primitive.h  progressreporter.cpp  progressreporter.h  quaternion.cpp  quaternion.h  reflection.cpp  rng.h  sampling.h  (+13 more)
src/ext/: rply.h
src/integrators/: sppm.cpp  whitted.cpp  whitted.h
src/main/: pbrt.cpp
src/materials/: disney.cpp  hair.cpp
src/shapes/: cone.cpp  cone.h  curve.cpp  curve.h  cylinder.cpp  cylinder.h  disk.cpp  disk.h  heightfield.cpp  heightfield.h  hyperboloid.cpp  hyperboloid.h  loopsubdiv.cpp  loopsubdiv.h  nurbs.cpp  nurbs.h  paraboloid.cpp  paraboloid.h  plymesh.cpp  plymesh.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/tests/: parallel.cpp  quaternion.cpp  shapes.cpp  transforms.cpp
src/tests/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
src/textures/: constant.h  marble.h
src/tools/intersectionoutput/: isecoutput.cpp
tensorflow/: src.pyproj  src.sln  start.cmd
tensorflow/models/: .gitignore  models.pyproj  models.sln
tensorflow/models/LinearClassifier/: dataHandling.py  dataPlotter.py  model.py  train.py
tensorflow/models/LinearClassifier - Set2/: dataHandling.py  model.py  predict.py  train.py
tensorflow/models/LinearRegressor/: dataHandling.py  model.py  predict.py  train.py
tensorflow/models/NeuralNetwork/: dataHandling.py  model.py  predict.py  train.py
tensorflow/models/NeuralNetwork - Set2/: dataHandling.py  dataPlotter.py  model.py  predict.py  train.py
tensorflow/models/TensorFlow - Keras/: Classifier_001.h5  train.py
tensorflow/models/saved_model/#1/: saved_model.pb
tensorflow/protocol/: LOG.txt
tensorflow/src/: main.py
(+57 files in other folders)
